[project]
name = "hat-controller"
version = "0.1.0"
description = "Hat controller"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "appdirs ~=1.4.4",
    "hat-aio ~=0.7.9",
    "hat-duktape ~=0.5.7",
    "hat-json ~=0.5.26",
    "hat-util ~=0.6.13",
]

[project.scripts]
hat-controller = "hat.controller.main:main"

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-controller.git"
Documentation = "http://hat-controller.hat-open.com"

[project.optional-dependencies]
dev = ["hat-doit ~=0.15.11"]

[build-system]
requires = ["hat-doit ~=0.15.11"]
build-backend = "hat.doit.pep517"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
